support for openstack magnum - WIP
to do:

openstack coe service list
wget https://download.fedoraproject.org/pub/alt/atomic/stable/Fedora-Atomic-27-20180419.0/CloudImages/x86_64/images/Fedora-Atomic-27-20180419.0.x86_64.qcow2
wget https://stable.release.core-os.net/amd64-usr/current/coreos_production_openstack_mini_image.img.bz2
wget https://stable.release.core-os.net/amd64-usr/current/coreos_production_openstack_image.img.bz2
openstack image create --disk-format=qcow2 --container-format=bare --file=Fedora-Atomic-27-20180419.0.x86_64.qcow2 --property os_distro='fedora-atomic' fedora-atomic-latest
openstack coe cluster template create kubernetes-cluster-template --image fedora-atomic-latest --external-network ext1-float --docker-volume-size 3 --dns-nameserver ${dns_server} --master-flavor generic1.small --flavor generic1.small --coe kubernetes --http_proxy ${http_proxy} --https_proxy ${https_proxy} --discovery-url
ssh-keygen
openstack keypair create --public-key ~/.ssh/id_rsa.pub rootkey
openstack coe cluster create kubernetes-cluster --cluster-template kubernetes-cluster-template --master-count 1 --node-count 1 --keypair rootkey

--- a/ansible/playbooks/roles/common/defaults/main/chef.yml
+++ b/ansible/playbooks/roles/common/defaults/main/chef.yml
@@ -134,6 +134,14 @@ chef_databags:
       secret: XWmecfpS5wS7SMqi4un3
     libvirt:
       secret: 8e4a6c8e-ebe9-4fb2-9df1-e5f15bf41888
+    magnum:
+      creds:
+        db:
+          username: magnum
+          password: 3Dhip8IKy_95O9LwOkpa
+        os:
+          username: magnum
+          password: 3Dhip8IKy_95O9LwOkpa
     neutron:
       creds:
         db:
@@ -224,6 +232,7 @@ chef_roles:
       - recipe[bcpc::cinder]
       - recipe[bcpc::horizon]
       - recipe[bcpc::heat]
+      - recipe[bcpc::magnum]
       - recipe[bcpc::os-quota]
       - recipe[bcpc::flavors]
 
