--- a/ansible/playbooks/roles/chef-node/tasks/chef-node.yml
+++ b/ansible/playbooks/roles/chef-node/tasks/chef-node.yml
@@ -1,11 +1,6 @@
-- name: upload chef-client package
-  copy:
-    src: "{{ assets_download_dir }}/{{ chef_client_package.filename }}"
-    dest: "/var/tmp/{{ chef_client_package.filename }}"
-
 - name: install chef-client package
-  apt:
-    deb: "/var/tmp/{{ chef_client_package.filename }}"
+  package:
+    name: chef
 
 - name: create /etc/chef directory
   file:
