--- a/ansible/playbooks/roles/web-server/tasks/main.yml
+++ b/ansible/playbooks/roles/web-server/tasks/main.yml
@@ -1,3 +1,3 @@
-- import_tasks: web-server.yml
+- import_tasks: configure-web-server.yml
   become: true
-  tags: [never,web-server]
+  tags: [never,configure-web-server]
