Convert the bcpc::system recipe to an Ansible task.
Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -246,6 +246,40 @@ ubuntu_apt:
 ###############################################################################
 # bird
 ###############################################################################
+
 bird:
   distribution:
     name: bionic-backports
+
+###############################################################################
+# grub
+###############################################################################
+
+grub:
+  cmdline_linux: []
+
+###############################################################################
+# system configuration
+###############################################################################
+
+hardware:
+  # Select desired I/O scheduler to be applied at startup (deadline, noop, cfq)
+  io_scheduler: deadline
+
+kernel:
+  # Pin the system kernel to a fixed version?
+  pin_version: false
+  version: ''
+
+system:
+  # Use this to *add* more reserved ports; i.e. modify value of
+  # net.ipv4.ip_local_reserved_ports
+  additional_reserved_ports: []
+
+  # Any other sysctl parameters that are to be overidden
+  parameters:
+    kernel_pid_max: 4194303
+    net.nf_conntrack_max: 262144
+
+  # Read-ahead value for all block devices, in kb
+  readahead_kb: 512
