--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -255,31 +255,26 @@ bird:
 # grub
 ###############################################################################
 
-grub:
-  cmdline_linux: []
+grub_cmdline_linux: []
 
 ###############################################################################
 # system configuration
 ###############################################################################
 
-hardware:
-  # Select desired I/O scheduler to be applied at startup (deadline, noop, cfq)
-  io_scheduler: deadline
+# Select desired I/O scheduler to be applied at startup (deadline, noop, cfq)
+hardware_io_scheduler: deadline
 
-kernel:
-  # Pin the system kernel to a fixed version?
-  pin_version: false
-  version: ''
+# Pin the system kernel to a fixed version?
+kernel_pin_version: false
+kernel_version: ''
 
-system:
-  # Use this to *add* more reserved ports; i.e. modify value of
-  # net.ipv4.ip_local_reserved_ports
-  additional_reserved_ports: []
+# Use this to *add* more reserved ports; i.e. modify value of
+# net.ipv4.ip_local_reserved_ports
+system_additional_reserved_ports: []
 
-  # Any other sysctl parameters that are to be overidden
-  parameters:
-    kernel_pid_max: 4194303
-    net.nf_conntrack_max: 262144
+# Any other sysctl parameters that are to be overidden
+system_parameters_kernel.pid_max: 4194303
+system_parameters_net.nf_conntrack_max: 262144
 
-  # Read-ahead value for all block devices, in kb
-  readahead_kb: 512
+# Read-ahead value for all block devices, in kb
+system_readahead_kb: 512
