--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -264,8 +264,12 @@ grub_cmdline_linux: []
 # Select desired I/O scheduler to be applied at startup (deadline, noop, cfq)
 hardware_io_scheduler: deadline
 
-# Pin the system kernel to a fixed version?
+# If pin_version is true, pin to {{ version }}-{{ variant }}
+# For example, {{ 5.0.0-32 }}-{{ lowlatency }}
+# If pin_version is false, track linux-{{ variant }} upstream
+# For example, linux-{{ generic-hwe-18.04 }}
 kernel_pin_version: false
+kernel_variant: generic
 kernel_version: ''
 
 # Use this to *add* more reserved ports; i.e. modify value of
