Add an option to disable IPv6.

--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -281,6 +281,9 @@ kernel_version: ''
 # net.ipv4.ip_local_reserved_ports
 system_additional_reserved_ports: []
 
+# Select IPv6 support.
+system_enable_ipv6: false
+
 # Any other sysctl parameters that are to be overidden
 system_parameters_kernel.pid_max: 4194303
 system_parameters_net.nf_conntrack_max: 262144
