Add lvm2 recipe and systemd override.
Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

--- a/ansible/playbooks/roles/common/defaults/main/chef.yml
+++ b/ansible/playbooks/roles/common/defaults/main/chef.yml
@@ -264,6 +264,7 @@ chef_roles:
       - recipe[bcpc::cpupower]
       - recipe[bcpc::getty]
       - recipe[bcpc::hwrng]
+      - recipe[bcpc::lvm2]
 
   - name: storagenode
     description: storage node
