--- a/virtual/Vagrantfile
+++ b/virtual/Vagrantfile
@@ -17,8 +17,8 @@
 require 'yaml'
 require './lib/util'
 
-base_box = 'bento/ubuntu-18.04'
-base_box_version = '202005.21.0'
+base_box = 'packer-box'
+base_box_version = '0'
 
 # load the vm topology profile
 topology = './topology/topology.yml'
