--- a/virtual/network/Vagrantfile
+++ b/virtual/network/Vagrantfile
@@ -16,8 +16,8 @@
 # limitations under the License.
 require '../lib/util'
 
-base_box = 'bento/ubuntu-18.04'
-base_box_version = '202005.21.0'
+base_box = 'packer-box'
+base_box_version = '0'
 
 def setup_proxy(node)
   http_proxy  = ENV['http_proxy']  || ''
