--- a/ansible/playbooks/roles/common/tasks/chef-client.yml
+++ b/ansible/playbooks/roles/common/tasks/chef-client.yml
@@ -1,4 +1,5 @@
-- debug:
+- name: indicate start of chef-client run
+  debug:
     msg: "running chef-client on {{ inventory_hostname }}"
 
 - name: run chef-client
