--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -290,8 +290,8 @@ system_additional_reserved_ports: []
 system_enable_ipv6: false
 
 # Any other sysctl parameters that are to be overidden
-system_parameters_kernel.pid_max: 4194303
-system_parameters_net.nf_conntrack_max: 262144
+system_parameters_kernel.pid_max: 4194303  # noqa var-naming
+system_parameters_net.nf_conntrack_max: 262144  # noqa var-naming
 
 # Read-ahead value for all block devices, in kb
 system_readahead_kb: 512
