--- a/ansible/playbooks/roles/common/tasks/configure-local-proxy.yml
+++ b/ansible/playbooks/roles/common/tasks/configure-local-proxy.yml
@@ -8,6 +8,7 @@
   template:
     src: tinyproxy/tinyproxy.conf.j2
     dest: /etc/tinyproxy/tinyproxy.conf
+    mode: 0644
   register: tinyproxy
   when: local_proxy is defined and local_proxy['enabled']
 
@@ -16,10 +17,11 @@
     name: tinyproxy
     state: restarted
     enabled: yes
-  when: tinyproxy.changed
+  when: tinyproxy.changed  # noqa no-handler
 
 - name: configure apt proxy
   template:
     src: apt/proxy.j2
     dest: /etc/apt/apt.conf.d/proxy
+    mode: 0644
   when: local_proxy is defined and local_proxy['enabled']
