--- a/ansible/playbooks/roles/common/tasks/configure-sshd.yml
+++ b/ansible/playbooks/roles/common/tasks/configure-sshd.yml
@@ -2,6 +2,7 @@
   template:
     src: ssh/sshd_config.j2
     dest: /etc/ssh/sshd_config
+    mode: 0644
     validate: /usr/sbin/sshd -t -f %s
     backup: true
   register: sshd
@@ -10,4 +11,4 @@
   service:
     name: sshd
     state: restarted
-  when: sshd.changed
+  when: sshd.changed  # noqa no-handler
