--- a/ansible/playbooks/roles/common/tasks/configure-system.yml
+++ b/ansible/playbooks/roles/common/tasks/configure-system.yml
@@ -146,29 +146,53 @@
     mode: '0644'
 
 # Stop and disable unused services
-- name: Configure system services
+- name: Stop and disable unused services
   service:
     name: "{{ item }}"
     enabled: no
     state: stopped
   with_items:
-    - iscsid
-    - lxcfs
-    - lxd
-    - rpcbind
+    - accounts-daemon
+    - atd
+    - fwupd
+    - multipathd.socket
+    - multipathd
+    - packagekit
+    - polkit
+    - snapd.socket
     - snapd
+    - snapd.seeded
+    - udisks2
+    - upower
   ignore_errors: yes  # noqa ignore-errors
 
-# Purge some Ubuntu packages
-- name: Purge undesirable packages
+# Purge some Ubuntu stock packages we don't need
+- name: Purge unused service packages
   apt:
     name: "{{ item }}"
     purge: yes
     state: absent
   with_items:
+    - accountsservice
+    - at
+    - fwupd
+    - fwupd-signed
+    - multipath-tools
+    - packagekit
+    - packagekit-tools
+    - policykit-1
+    - snapd
     - ubuntu-advantage-tools
     - update-notifier-common
     - ubuntu-release-upgrader-core
+    - udisks2
+    - upower
+
+# Purge off dependencies of uneeded packages
+- name: Purge unused packages
+  apt:
+    autoremove: yes
+    purge: yes
 
 # Configure motd-news
 - name: Configure motd-news
