--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -235,22 +235,14 @@ ubuntu_apt:
     - universe
     - multiverse
   sources:
-    - dist: bionic
+    - dist: focal
       url: http://archive.ubuntu.com/ubuntu
-    - dist: bionic-backports
+    - dist: focal-backports
       url: http://archive.ubuntu.com/ubuntu
-    - dist: bionic-security
+    - dist: focal-security
       url: http://security.ubuntu.com/ubuntu
-    - dist: bionic-updates
+    - dist: focal-updates
       url: http://archive.ubuntu.com/ubuntu
-
-###############################################################################
-# bird
-###############################################################################
-
-bird:
-  distribution:
-    name: bionic-backports
 
 ###############################################################################
 # grub
@@ -279,7 +271,7 @@ hardware_cpu_load_microcode: true
 # If pin_version is false, track linux-{{ variant }} upstream
 # For example, linux-{{ generic-hwe-18.04 }}
 kernel_pin_version: false
-kernel_variant: generic-hwe-18.04-edge
+kernel_variant: generic-hwe-20.04-edge
 kernel_version: ''
 
 # Use this to *add* more reserved ports; i.e. modify value of
