Moving haproxy recipe to ansible role.
Signed-off-by: npustchi <npustchi@bloomberg.net>

--- a/ansible/playbooks/headnodes.yml
+++ b/ansible/playbooks/headnodes.yml
@@ -2,6 +2,15 @@
   gather_facts: no
   serial: "{{ step | default(ansible_play_batch | length) }}"
   roles:
-    - common
     - chef-node
+    - cinder
+    - common
+    - glance
+    - haproxy
     - headnode
+    - heat
+    - keystone
+    - neutron
+    - nova
+    - placement
+    - watcher
