--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -3,6 +3,7 @@
 - import_playbook: bootstraps.yml
 - import_playbook: headnodes.yml
 - import_playbook: rmqnodes.yml
+- import_playbook: mysqlnodes.yml
 - import_playbook: storageheadnodes.yml
 - import_playbook: worknodes.yml
 - import_playbook: storagenodes.yml
