--- a/ansible/playbooks/roles/common/defaults/main/chef.yml
+++ b/ansible/playbooks/roles/common/defaults/main/chef.yml
@@ -70,7 +70,6 @@ chef_roles:
       - recipe[bcpc::etcd-member]
       - recipe[bcpc::memcached]
       - recipe[bcpc::unbound]
-      - recipe[bcpc::mysql]
       - recipe[bcpc::proxysql]
       - recipe[bcpc::powerdns]
       - recipe[bcpc::apache2]
@@ -93,6 +92,14 @@ chef_roles:
     run_list:
       - role[node]
       - recipe[bcpc::rabbitmq]
+
+  - name: mysqlnode
+    description: cloud infrastructure database services
+    json_class: Chef::Role
+    chef_type: role
+    run_list:
+      - role[node]
+      - recipe[bcpc::mysql]
 
   - name: node
     description: common role for all bcpc nodes
