add consul tags

--- a/ansible/playbooks/roles/consul/tasks/main.yml
+++ b/ansible/playbooks/roles/consul/tasks/main.yml
@@ -1,6 +1,6 @@
 - import_tasks: install-required-packages.yml
   become: true
-  tags: [never,configure-consul]
+  tags: [never,configure-consul, configure-consul-agent]
 
 - import_tasks: install-consul.yml
   become: true
