update gitignore and readme for s3 for packer
Signed-off-by: jgeng25 <jgeng25@bloomberg.net>

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ chef/environments/
 chef/databags/
 virtual/files/ssh/id_*
 virtual/packer/output-vagrant/*
-virtual/packer/variables.json
+virtual/packer/config/variables.json
+virtual/packer/download/*
+virtual/packer/config/s3.json
 hardware.overrides.yml
 topology.overrides.yml
