--- a/virtual/packer/config/variables.json.libvirt.example
+++ b/virtual/packer/config/variables.json.libvirt.example
@@ -4,6 +4,8 @@
   "kernel_version": "generic-hwe-20.04-edge",
   "base_box": "bento/ubuntu-20.04",
   "base_box_version": "202112.19.0",
+  "bcc_http_proxy_url": "",
+  "bcc_https_proxy_url": "",
   "base_box_provider": "libvirt",
   "output_packer_box_name": "bcc-ubuntu-20.04"
 }
