added support for resolv.conf search path
  - resolv.conf.j2 will now populate the `search` parameter of the
    /etc/resolv.conf file with a list of domain names (if defined)

  - default value: `{{ cloud_infrastructure_domain }}`

Signed-off-by: Justin Pacheco <jpacheco39@bloomberg.net>

--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -91,6 +91,10 @@ dns:
     - 8.8.8.8
     - 8.8.4.4
 
+# default domain search path
+dns_search:
+  - "{{ cloud_infrastructure_domain }}"
+
 ###############################################################################
 # ntp servers
 ###############################################################################
