--- a/ansible/playbooks/roles/headnode/tasks/configure-licenses.yml
+++ b/ansible/playbooks/roles/headnode/tasks/configure-licenses.yml
@@ -29,14 +29,14 @@
   shell: |
     set -o pipefail
     host_name={{ item }}
-    domain={{ cloud_domain }}
+    infrastructure_domain={{ cloud_infrastructure_domain }}
     trait_keyword={{ license_trait_keyword }}
     aggregates_to_add=({{ hostvars[item] \
       | aggregates_to_add_host(license_aggregate) }})
     aggregates_to_remove=({{ hostvars[item] \
       | aggregates_to_remove_host(license_aggregate) }})
     host_uuid=$(openstack resource provider list \
-      --name ${host_name}.${domain} -c uuid -f value)
+      --name ${host_name}.${infrastructure_domain} -c uuid -f value)
 
     # update host traits from inventory license list
     traits=$(openstack --os-placement-api-version 1.6 resource provider \
